--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DIO - Youtube</title>
+    <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
+    <header>
+        
+    </header>
     
 </body>
 </html>
