feat: add basic HTML skeleton

--- a/index.html
+++ b/index.html
@@ -7,9 +7,108 @@
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
-    <header>
-        
+    <header class="menu">
+        <div class="menu__logo-section">
+            <img src="./assets/images/menu.png" alt="Ícone com três linhas simbolizando um menu">
+            <img src="./assets/images/youtube 1.png" alt="Logo do youtube">
+        </div>
+        <nav class="menu__search-container">
+            <input type="text" class="search-input">
+            <button class="search-button"><img src="./assets/images/search.png" alt="Ícone de lupa"></button>
+        </nav>
+        <div class="menu__profile-container">
+            <img src="./assets/images/video.png" alt="Ícone de um vídeo">
+            <img src="./assets/images/bell.png" alt="Ícone de sino">
+            <img src="./assets/images/Avatar.png" alt="Imagem de perfil">
+        </div>
     </header>
+
+    <main>
+        <section class="main-video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/iAnERiiyOKc?si=Llowk1Y31M5_KdF3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <h1>Semana Front-end | Dia 01: Construindo uma Landing Page no Mundo Invertido com HTML e CSS</h1>
+            <div class="main__video__options">
+                <div class="video__profile">
+                    <img src="./assets/images/Channel Avatar.png" alt="">
+                    <div class="profile__detail">
+                        <h2>DIO</h2>
+                        <p>83,3 mil inscritos</p>
+                    </div>
+                    <button class="button-subscribe">Inscreva-se</button>
+                </div>
+                <div class="video__buttons-interaction">
+                    <button><img src="./assets/images/thumbs.png" alt="Ícone de joinha para cima">2 mil</button>
+                    <button><img src="./assets/images/thumbs.png" alt="Ícone de joinha para baixo">Não gostei</button>
+                    <button><img src="./assets/images/share-2.png" alt="Ícone de compartilhamento">Compartilhar</button>
+                    <button><img src="./assets/images/download.png" alt="Ícone de download">Download</button>
+                </div>
+            </div>
+            <div class="main__video__text-infos">
+                <span>28.418 visualizações</span> <span>Transmitido ao vivo em 23 ago. de 2022</span>
+            </div>
+            <div class="main__video__description">
+                Inicie uma aventura imersiva no mundo do Front-end com HTML e CSS. Para isso, criaremos uma landing page com a temática da série Stranger Things, a qual contará com a implementação de um theme switcher (light e dark) para explorarmos os mistérios do mundo invertido.
+            </div>
+        </section>
+        <aside>
+            <div class="aside-video__container">
+                <img src="./assets/images/thumb-1.png" alt="Imagem de thumbnail">
+                <div class="aside-video__container__texts">
+                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>2,1 mil visualizações</p>
+                        <p>Transmitido há 2 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <img src="./assets/images/thumb-2.png" alt="Imagem de thumbnail">
+                <div class="aside-video__container__texts">
+                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>2,1 mil visualizações</p>
+                        <p>Transmitido há 2 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <img src="./assets/images/thumb-3.png" alt="Imagem de thumbnail">
+                <div class="aside-video__container__texts">
+                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>2,1 mil visualizações</p>
+                        <p>Transmitido há 2 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <img src="./assets/images/thumb-4.png" alt="Imagem de thumbnail">
+                <div class="aside-video__container__texts">
+                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>2,1 mil visualizações</p>
+                        <p>Transmitido há 2 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <img src="./assets/images/thumb-5.png" alt="Imagem de thumbnail">
+                <div class="aside-video__container__texts">
+                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>2,1 mil visualizações</p>
+                        <p>Transmitido há 2 dias</p>
+                    </div>
+                </div>
+            </div>
+        </aside>
+    </main>
     
+    <footer>Feito por Nathalia Irokawa</footer>
 </body>
 </html>
