style: add ipad responsive layout

--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
     </header>
 
     <main>
+        <div class="video-wrapper">
+            <iframe class="iframe-mobile" width="560" height="315" src="https://www.youtube.com/embed/iAnERiiyOKc?si=Llowk1Y31M5_KdF3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
         <section class="main-video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/iAnERiiyOKc?si=Llowk1Y31M5_KdF3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="video-wrapper">
+                <iframe class="iframe-desktop" width="560" height="315" src="https://www.youtube.com/embed/iAnERiiyOKc?si=Llowk1Y31M5_KdF3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             <h1>Semana Front-end | Dia 01: Construindo uma Landing Page no Mundo Invertido com HTML e CSS</h1>
             <div class="main__video__options">
                 <div class="video__profile">
@@ -109,6 +114,6 @@
         </aside>
     </main>
     
-    <footer>Feito por Nathalia Irokawa</footer>
+    <footer>Feito por <a href=""></a>Nathalia Irokawa</footer>
 </body>
 </html>
