--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DIO - Youtube</title>
+    <link rel="icon" href="https://www.youtube.com/s/desktop/b2f97639/img/logos/favicon.ico">
     <link rel="stylesheet" href="assets/styles/styles.css">
 </head>
 <body>
     <header class="menu">
         <div class="menu__logo-section">
             <img src="./assets/images/menu.png" alt="Ícone com três linhas simbolizando um menu">
-            <img src="./assets/images/youtube 1.png" alt="Logo do youtube">
+            <a href="http://youtube.com"><img src="./assets/images/youtube 1.png" alt="Logo do youtube"></a>
         </div>
         <nav class="menu__search-container">
             <input type="text" class="search-input">
@@ -36,7 +37,7 @@
                 <div class="video__profile">
                     <img src="./assets/images/Channel Avatar.png" alt="">
                     <div class="profile__detail">
-                        <h2>DIO</h2>
+                        <a>DIO</a>
                         <p>83,3 mil inscritos</p>
                     </div>
                     <button class="button-subscribe">Inscreva-se</button>
@@ -57,9 +58,11 @@
         </section>
         <aside>
             <div class="aside-video__container">
-                <img src="./assets/images/thumb-1.png" alt="Imagem de thumbnail">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-1.png" alt="Imagem de thumbnail">
+                </div>
                 <div class="aside-video__container__texts">
-                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <h2>Geração Tech Unimed - BH - Ciência de Dados</h2>
                     <a href="#">DigitalInnovationOne</a>
                     <div class="details">
                         <p>2,1 mil visualizações</p>
@@ -68,9 +71,63 @@
                 </div>
             </div>
             <div class="aside-video__container">
-                <img src="./assets/images/thumb-2.png" alt="Imagem de thumbnail">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-2.png" alt="Imagem de thumbnail">
+                </div>
                 <div class="aside-video__container__texts">
-                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <h2>Scrum Talks</h2>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>1,6 mil visualizações</p>
+                        <p>Transmitido há 3 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-3.png" alt="Imagem de thumbnail">
+                </div>
+                <div class="aside-video__container__texts">
+                    <h2>Machine Learning Avançado - Fast Track</h2>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>1,7 mil visualizações</p>
+                        <p>Transmitido há 4 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-4.png" alt="Imagem de thumbnail">
+                </div>
+                <div class="aside-video__container__texts">
+                    <h2>Global Skills #2 - Project Planning</h2>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>917 mil visualizações</p>
+                        <p>Transmitido há 5 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-5.png" alt="Imagem de thumbnail">
+                </div>
+                <div class="aside-video__container__texts">
+                    <h2>Como aprender a programar Python do ZERO</h2>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>711 mil visualizações</p>
+                        <p>Transmitido há 6 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-1.png" alt="Imagem de thumbnail">
+                </div>
+                <div class="aside-video__container__texts">
+                    <h2>Geração Tech Unimed - BH - Ciência de Dados</h2>
                     <a href="#">DigitalInnovationOne</a>
                     <div class="details">
                         <p>2,1 mil visualizações</p>
@@ -79,41 +136,60 @@
                 </div>
             </div>
             <div class="aside-video__container">
-                <img src="./assets/images/thumb-3.png" alt="Imagem de thumbnail">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-2.png" alt="Imagem de thumbnail">
+                </div>
                 <div class="aside-video__container__texts">
-                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <h2>Scrum Talks</h2>
                     <a href="#">DigitalInnovationOne</a>
                     <div class="details">
-                        <p>2,1 mil visualizações</p>
-                        <p>Transmitido há 2 dias</p>
+                        <p>1,6 mil visualizações</p>
+                        <p>Transmitido há 3 dias</p>
                     </div>
                 </div>
             </div>
             <div class="aside-video__container">
-                <img src="./assets/images/thumb-4.png" alt="Imagem de thumbnail">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-3.png" alt="Imagem de thumbnail">
+                </div>
                 <div class="aside-video__container__texts">
-                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <h2>Machine Learning Avançado - Fast Track</h2>
                     <a href="#">DigitalInnovationOne</a>
                     <div class="details">
-                        <p>2,1 mil visualizações</p>
-                        <p>Transmitido há 2 dias</p>
+                        <p>1,7 mil visualizações</p>
+                        <p>Transmitido há 4 dias</p>
                     </div>
                 </div>
             </div>
             <div class="aside-video__container">
-                <img src="./assets/images/thumb-5.png" alt="Imagem de thumbnail">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-4.png" alt="Imagem de thumbnail">
+                </div>
                 <div class="aside-video__container__texts">
-                    <h3>Geração Tech Unimed - BH - Ciência de Dados</h3>
+                    <h2>Global Skills #2 - Project Planning</h2>
                     <a href="#">DigitalInnovationOne</a>
                     <div class="details">
-                        <p>2,1 mil visualizações</p>
-                        <p>Transmitido há 2 dias</p>
+                        <p>917 mil visualizações</p>
+                        <p>Transmitido há 5 dias</p>
+                    </div>
+                </div>
+            </div>
+            <div class="aside-video__container">
+                <div class="aside__thumbnail-wrapper">
+                    <img src="./assets/images/thumb-5.png" alt="Imagem de thumbnail">
+                </div>
+                <div class="aside-video__container__texts">
+                    <h2>Como aprender a programar Python do ZERO</h2>
+                    <a href="#">DigitalInnovationOne</a>
+                    <div class="details">
+                        <p>711 mil visualizações</p>
+                        <p>Transmitido há 6 dias</p>
                     </div>
                 </div>
             </div>
         </aside>
     </main>
     
-    <footer>Feito por <a href=""></a>Nathalia Irokawa</footer>
+    <footer>Feito por <a href="https://github.com/nathaliaif">Nathalia Irokawa</a></footer>
 </body>
 </html>
